<resources>
    <string name="app_name">Poll Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_polling_grounds_await_your_question">The Polling Grounds Await Your Question</string>
    <string name="no_history_avaliable">No History Avaliable.Contribute to Polls and See Your Journey Here.</string>
    <string name="create_poll">Create Poll</string>
    <string name="poll_question">Poll question</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="answer_option">Answer options</string>
    <string name="add_option">Add Option</string>
    <string name="create">Create</string>
    <string name="add_options">You can add %s more options.</string>
</resources>